# trismik-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_unasync.py
.cursor/rules/: poetry.mdc  pre-commit.mdc
.github/workflows/: ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml
example/: example.py  example_client.py  example_runner.py
examples/: _cli_helpers.py  _sample_metadata.py  create_project_and_submit_eval.py  example_adaptive_test.py  example_client.py  example_client_async.py  example_fix_seed.py  example_notebook.ipynb  example_open_ended_test.py  example_openai.py  example_runner.py  example_runner_async.py  example_transformers.py  fix_seed.py  mock_data.json  submit_classic_eval.py
examples/notebooks/: adaptive_testing_intro_openai.ipynb
src/trismik/: __init__.py  _mapper.py  _utils.py  adaptive_test.py  client.py  client_async.py  exceptions.py  mapper.py  runner.py  runner_async.py  settings.py  types.py  utils.py
src/trismik/_async/: __init__.py  _test_transform.py  client.py  helpers.py
src/trismik/_sync/: _test_transform.py  client.py  helpers.py
tests/: _mocker.py  test_adaptive_test.py  test_client.py  test_client_async.py  test_client_sync.py  test_helpers.py  test_mapper.py  test_runner.py  test_runner_async.py  test_utils.py
