[project]
name = "trismik"
dynamic = ["version"]
description = ""
authors = [
    { name = "Bartosz Kielczewski", email = "bk352@cam.ac.uk" },
    { name = "Peter Monks", email = "peter.monks@systemc.com" },
    { name = "Greg Holdridge", email = "greg.holdridge@systemc.com" },
    { name = "Marco Basaldella", email = "marco@trismik.com" }
]
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "httpx (>=0.27.2,<1.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
]

[project.optional-dependencies]
examples = [
    "transformers>=4.51.3,<5.0.0",
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.22.0,<1.0.0",
    "torchaudio>=2.7.0,<3.0.0",
    "accelerate>=1.7.0,<2.0.0",
    "openai>=1.81.0,<2.0.0",
    "notebook>=7.4.4,<8.0.0",
    "jupyterlab>=4.4.8",
    "tqdm>=4.67.1,<5.0.0"
]


[tool.poetry]
packages = [{ include = "trismik", from = "src" }]
version = "0.0.0" # managed by poetry-dynamic-versioning

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.6.2"
black = "^24.3.0"
isort = "^5.13.2"
Flake8-pyproject = "^1.2.3"
flake8 = "^7.0.0"
mypy = "^1.15.0"
autoflake = "^2.3.1"
unasync = "^0.6.0"
tomlkit = "^0.13.2"

[tool.poetry-dynamic-versioning]
# Expected Git tags: vX.Y.Z, vX.Y.Z-alphaN, vX.Y.Z-betaN, vX.Y.Z-rcN
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "class"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
install_types = true

[tool.flake8] # note that this depends on Flake8-pyproject
ignore = ["D202", "W503", "W504"]

[tool.unasync]
[[tool.unasync.rules]]
fromdir = "src/trismik/_async/"
todir = "src/trismik/_sync/"
exclude = [
    "**/helpers.py"  # Manually maintained in both versions
]

# Only custom replacements (defaults handle async/await/async with/async for automatically)
[tool.unasync.rules.replacements]
"TrismikAsyncClient" = "TrismikClient"
"AsyncClient" = "Client"
"_async" = "_sync"
"aclose" = "close"
